fix: layout issues
Removed refresh button
Moved date to hidden part of dropdown
Layout improvements for narrow screens

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 /* Custom utilities for line clamping */
 .line-clamp-2 {
   display: -webkit-box;
